[package]
name = "story-engine"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "*"
rand = "*"
rand_chacha = "*"
rand_core = "*"
serde = "*"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
perlin_noise = "*"
arrayvec = {version="*", features=["serde-1"] }
