[package]
name = "story-engine"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "*"
rand = "0.7.2"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
serde = "*"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
perlin_noise = "*"
arrayvec = {version="*", features=["serde-1"] }

strum = "0.16.0"
strum_macros = "0.16.0"